# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
gendiff/: __init__.py  tools.py
gendiff/formatеrs/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: __init__.py  test_gendiff.py  test_json.py  test_yaml.py
gendiff/tests/test_data/: a.yaml  expected_plain.txt  expected_stylish.txt
gendiff/tests/test_data/input/: boolean_and_none_1.json  boolean_and_none_1.yaml  boolean_and_none_2.json  boolean_and_none_2.yaml  multiple_changed_keys_2.json  multiple_changed_keys_2.yaml  nested_changed_2.json
gendiff/tests/test_data/output/: added_key.txt  boolean_and_none.txt  equal.txt  multiple_changed_keys.txt  removed_key.txt  value_changed.txt
gendiff/tools/: __init__.py  format.py  formatter.py  tools.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_json.py  test_yaml.py
tests/test_data/: a.json  b.json  b.yaml  expected_json.json
